feat: try generating sql via graphql