@@ -18,7 +18,7 @@
 
     <properties>
         <!-- compiling -->
-        <java.version>17</java.version>
+        <java.version>21</java.version>
 
         <!-- encoding -->
         <encoding>UTF-8</encoding>
@@ -145,6 +145,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
 
         <dependency>
@@ -419,13 +423,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>21</source>
+                    <target>21</target>
                     <testSource>${java.version}</testSource>
                     <testTarget>${java.version}</testTarget>
                     <encoding>${encoding}</encoding>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
+                    <compilerArgs>--enable-preview
                     </compilerArgs>
                 </configuration>
             </plugin>
